Join buttons in nav-links and mainTitle redirect to external website, fixed bug causing inability to interact with the join button in mainTitle, removed in site form for joining, join buttons work as intended now

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ main {
         rgba(0, 255, 0, 0.05) 40px
     );
     animation: scan 10s linear infinite;
+    pointer-events: none; /*To fix pointer blocking*/
 }
 
 @keyframes scan {
