--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ body.light-mode .hero h1 {
 .foss .meaning{
   visibility: hidden;
   width: 20rem;
-  background-color: var(--background-color);
+  background-color: var(--secondary-color);
   color: var(--text-color);
   text-align: center;
   border-radius: 5px;
