--- a/styles.css
+++ b/styles.css
@@ -700,12 +700,12 @@ body.light-mode .hero h1 {
 .section-title {
   cursor: pointer;
   padding: 10px;
-  background-color: #f0f0f0;
   border-radius: 5px;
   margin-bottom: 10px;
 }
 
 .section-title:hover {
-  background-color: #e0e0e0;
+  color:#008060;
+  text
 }
 
